--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,8 @@
 
-add_library(mian_lib deque.cpp iterator.cpp)
-add_executable(mian_src main.cpp)
+
+find_package (Threads)
+add_library(mian_lib deque.cpp iterator.cpp User.cpp unique_ptr.cpp semaphore.cpp)
+
+# target_link_libraries (mian_lib Threads::Threads)
+
+add_executable(mian_src main.cpp User.cpp)
