--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,13 @@
 *.out
 *.app
 
-build/
 .idea/
-lib/
+/lib/
+/bin/
+.vscode/
+.cache/
+
+/build
+/build-debug
+/build-release
+/cmake-build-debug
