--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,40 +1,54 @@
+cmake_minimum_required(VERSION 3.14)
 
-# Download and unpack googletest at configure time
-configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
-execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-        RESULT_VARIABLE result
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-execute_process(COMMAND ${CMAKE_COMMAND} --build .
-        RESULT_VARIABLE result
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-    message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
+# GoogleTest requires at least C++14
+set(CMAKE_CXX_STANDARD 20)
 
-# Prevent overriding the parent project's compiler/linker
-# settings on Windows
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG release-1.12.1
+)
+
+# For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
-# Add googletest directly to our build. This defines
-# the gtest and gtest_main targets.
-add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-        ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-        EXCLUDE_FROM_ALL)
+enable_testing()
 
-# The gtest/gtest_main targets carry header search path
-# dependencies automatically when using CMake 2.8.11 or
-# later. Otherwise we have to add them here ourselves.
-if (CMAKE_VERSION VERSION_LESS 2.8.11)
-    include_directories("${gtest_SOURCE_DIR}/include")
-endif()
-
+find_package (Threads)
 
 # Now simply link against gtest or gtest_main as needed. Eg
-add_executable(mian_test fake_unittest.cpp test_deque.cpp)
+add_executable(mian_test
+        fake_unittest.cpp
+        test_deque.cpp
+        unique_ptr_test.cpp
+        hello_test.cc
+        )
 
-target_link_libraries(mian_test gtest_main)
-add_test(NAME unittest_0 COMMAND mian_test)
+target_link_libraries(
+        mian_test
+        GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(mian_test)
+
+
+add_executable(test_thread_pool test_thread_pool.cpp)
+
+
+target_link_libraries(
+        test_thread_pool
+        mian_lib
+        GTest::gtest_main
+        # Threads::Threads
+)
+
+include(GoogleTest)
+gtest_discover_tests(test_thread_pool)
+
+#link_directories(${PROJECT_SOURCE_DIR}/src)
+
+#add_test(NAME unittest_0 COMMAND mian_test)
 
